--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -51,7 +50,6 @@
               <span class="user-menu-text">Корзина</span>
             </a>
             <div class="popover popover-cart">
-              <h2 class="visually-hidden">Корзина</h2>
               <ul class="cart-items-list reset-ul">
                 <li class="cart-item">
                   <img class="cart-item-image" src="images/catalog/product-1-small.png" width="41" height="43"
@@ -156,15 +154,16 @@
           <a class="breadcrumbs-link" href="#">Каталог товаров</a>
         </li>
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="#">Моноподы для селфи</a>
+          <span class="breadcrumbs-link">Моноподы для селфи</span>
         </li>
       </ul>
     </header>
 
     <section class="catalog">
+      <h2 class="visually-hidden">Каталог</h2>
       <div class="catalog-filters">
         <div class="catalog-filters-row">
-          <h2 class="catalog-filters-title reset-indent title-3">Фильтр:</h2>
+          <h3 class="catalog-filters-title reset-indent title-3">Фильтр:</h3>
         </div>
         <!-- Фильтр -->
         <div class="catalog-filter-wrapper">
@@ -174,7 +173,7 @@
 
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left: 0px; width: 119px">
+                  <div class="range-bar">
                     <button class="range-toggle toggle-min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
@@ -190,7 +189,7 @@
                   от <input class="range-input" type="number" value="0" name="min-price">
                 </label>
                 <label class="catalog-filter-label">
-                  до <input class="range-input" type="number" value="5000" name="max-price" style="width: 55px">
+                  до <input class="range-input range-input-right" type="number" value="5000" name="max-price">
                 </label>
               </div>
             </fieldset>
@@ -242,14 +241,14 @@
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="radio" name="bluetooth" value="yes" checked>
-                    <span class="control-mark"></span>
+                    <span class="control-mark control-mark-radio"></span>
                     <span class="control-label">Есть</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="radio" name="bluetooth" value="no">
-                    <span class="control-mark"></span>
+                    <span class="control-mark control-mark-radio"></span>
                     <span class="control-label">Нет</span>
                   </label>
                 </li>
@@ -263,26 +262,32 @@
       <div class="catalog-result">
         <div class="catalog-sort-wrapper">
           <div class="catalog-sort">
+            <h3 class="catalog-sort-title reset-indent title-3">Сортировка:</h3>
             <form class="sorting-type">
-              <label class="catalog-title title-3" for="sorting">Сортировка:</label>
+              <label class="visually-hidden">Сортировка:</label>
               <select class="select-control" id="sorting">
                 <option value="popular">Сначала популярные</option>
                 <option value="cheap">Сначала дешёвое</option>
                 <option value="expensive">Сначала дорогое</option>
-                <button class="visually-hidden" type="submit">Отсортировать</button>
               </select>
+              <button class="visually-hidden" type="submit">Отсортировать</button>
             </form>
             <ul class="sort-dir reset-ul">
-              <li class="sort-dir-item sort-dir-active">
-                <a href="" class="sort-dir-link">
-                  <img class="sort-dir-icon" src="images/svg/sort-up.svg" width="11" height="10" alt="Сортировка вврех">
+              <li class="sort-dir-item ">
+                <a href="#" class="sort-dir-link">
+                  <svg class="sort-dir-icon" width="11" height="10" viewBox="0 0 11 10"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 0L11 10H0" />
+                  </svg>
                   <span class="visually-hidden">Сортировка вврех</span>
                 </a>
               </li>
               <li class="sort-dir-item">
-                <a href="" class="sort-dir-link">
-                  <img class="sort-dir-icon" src="images/svg/sort-down.svg" width="11" height="10"
-                    alt="Сортировка вниз">
+                <a href="#" class="sort-dir-link sort-dir-active">
+                  <svg class="sort-dir-icon" width="11" height="10" viewBox="0 0 11 10"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 10L0 0H11" />
+                  </svg>
                   <span class="visually-hidden is-active">Сортировка вниз</span>
                 </a>
               </li>
@@ -295,9 +300,9 @@
               <a class="product-card-header" href="#">
                 <img class="product-card-image" src="images/catalog/product_1.png" width="360" height="380"
                   alt="Любительская селфи-палка">
-                <span class="product-card-overlay">
-                  <p class="button link-detailed">Подробнее</p>
-                </span>
+                <div class="product-card-overlay">
+                  <span class="button link-detailed">Подробнее</span>
+                </div>
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
@@ -311,13 +316,13 @@
               <a class="product-card-header" href="#">
                 <img class="product-card-image" src="images/catalog/product_2.png" width="360" height="380"
                   alt="Профессиональная селфи-палка">
-                <span class="product-card-overlay">
-                  <p class="button link-detailed">Подробнее</p>
-                </span>
+                <div class="product-card-overlay">
+                  <span class="button link-detailed">Подробнее</span>
+                </div>
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Профессиональная селфи-палка</a>
+                  <a class="product-card-link" href="#">Профессиональная <span>селфи-палка</span></a>
                 </h3>
                 <p class="product-card-price">1 500 ₽</p>
               </div>
@@ -327,30 +332,29 @@
               <a class="product-card-header" href="#">
                 <img class="product-card-image" src="images/catalog/product_3.png" width="360" height="380"
                   alt="Непотопляемая селфи-палка">
-                <span class="product-card-overlay">
-                  <p class="button link-detailed">Подробнее</p>
-                </span>
+                <div class="product-card-overlay">
+                  <span class="button link-detailed">Подробнее</span>
+                </div>
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Непотопляемая селфи-палка</a>
+                  <a class="product-card-link" href="#">Непотопляемая <span>селфи-палка</span></a>
                 </h3>
                 <p class="product-card-price">2 500 ₽</p>
               </div>
             </li>
 
-            <li class="product-card">
+            <li class="product-card product-card-new">
               <a class="product-card-header" href="#">
-                <div class="product-new title-3">New</div>
                 <img class="product-card-image" src="images/catalog/product_4.png" width="360" height="380"
                   alt="Селфи-палка «Следуй за мной»">
-                <span class="product-card-overlay">
-                  <p class="button link-detailed">Подробнее</p>
-                </span>
+                <div class="product-card-overlay">
+                  <span class="button link-detailed">Подробнее</span>
+                </div>
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Селфи-палка «Следуй за мной»</a>
+                  <a class="product-card-link" href="#">Селфи-палка «Следуй за<span> мной» </span></a>
                 </h3>
                 <p class="product-card-price">4 900 ₽</p>
               </div>
@@ -358,29 +362,35 @@
           </ul>
           <button class="pagination-show-more title-3">Загрузить ещё</button>
           <ul class="pagination reset-ul">
-            <li class="pagination-item">
-              <a class="pagination-link pagination-prev pagination-disabled">
-                <span class="pagination-text">Назад</span>
-              </a>
+            <li class="pagination-item pagination-item-prev">
+              <span class="pagination-link pagination-prev">
+                Назад
+              </span>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" href="#">1</a>
+              <ul class="pagination-sublist reset-ul">
+                <li class="pagination-item">
+                  <a class="pagination-link" href="#">1</a>
+                </li>
+                <li class="pagination-item">
+                  <a class="pagination-link" href="#">2</a>
+                </li>
+                <li class="pagination-item">
+                  <a class="pagination-link" href="#">3</a>
+                </li>
+                <li class="pagination-item">
+                  <a class="pagination-link" href="#">...</a>
+                </li>
+                <li class="pagination-item">
+                  <a class="pagination-link" href="#">15</a>
+                </li>
+              </ul>
+
             </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">2</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">3</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">...</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">15</a>
-            </li>
-            <li class="pagination-item">
+
+            <li class="pagination-item pagination-item-next">
               <a class="pagination-link pagination-next" href="#">
-                <span class="pagination-text">Вперёд</span>
+                Вперёд
               </a>
             </li>
           </ul>
