--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -39,7 +38,7 @@
               <span class="user-menu-text">Сравнить</span>
             </a>
           </li>
-          <li class="user-menu-item">
+          <li class="user-menu-item user-menu-cart">
             <a class="user-menu-link menu-basket" href="#">
               <span class="menu-basket-value">2</span>
               <img class="user-menu-icon" src="images/svg/cart.svg" width="16" height="14" alt="Корзина">
@@ -49,9 +48,11 @@
               <h2 class="visually-hidden">Корзина</h2>
               <ul class="cart-items-list reset-ul">
                 <li class="cart-item">
-                  <img class="cart-item-image" src="images/catalog/product-1-small.png" width="41" height="43"
-                    alt="Любительская селфи-палка">
-                  <p class="cart-item-title reset-indent">Любительская селфи-палка</p>
+                  <a class="cart-item-link" href="#">
+                    <img class="cart-item-image" src="images/catalog/product-1-small.png" width="41" height="43"
+                      alt="Любительская селфи-палка">
+                    <span class="cart-item-title ">Любительская селфи-палка</span>
+                  </a>
                   <button class="cart-item-button" type="button">
                     <img class="cart-item-icon" src="images/svg/delete.svg" width="11" height="11" alt="Закрыть">
                   </button>
@@ -222,31 +223,37 @@
         </li>
       </ul>
       <ul class="slider-navigation reset-ul">
-        <!-- <li class="slider-navigation-item"> -->
-        <button class="slider-navigation-buttom slider-prev" type="button">
-          <img class="slider-navigation-image" src="images/svg/left-tall-arrow.svg" width="20" height="60"
-            alt="Предыдущий слайдер">
-          <span class="visually-hidden">Предыдущий слайдер</span>
-        </button>
-        <!-- </li>
-        <li class="slider-navigation-item"> -->
-        <button class="slider-navigation-buttom slider-next" type="button">
-          <img class="slider-navigation-image" src="images/svg/right-tall-arrow.svg" width="20" height="60"
-            alt="Следующий слайдер">
-          <span class="visually-hidden">Следующий слайдер</span>
-        </button>
-        <!-- </li> -->
+        <li class="slider-navigation-item">
+          <button class="slider-navigation-buttom slider-prev" type="button">
+            <img class="slider-navigation-image" src="images/svg/left-tall-arrow.svg" width="20" height="60"
+              alt="Предыдущий слайдер">
+            <span class="visually-hidden">Предыдущий слайдер</span>
+          </button>
+        </li>
+        <li class="slider-navigation-item">
+          <button class="slider-navigation-buttom slider-next" type="button">
+            <img class="slider-navigation-image" src="images/svg/right-tall-arrow.svg" width="20" height="60"
+              alt="Следующий слайдер">
+            <span class="visually-hidden">Следующий слайдер</span>
+          </button>
+        </li>
       </ul>
       <ol class="slider-dots reset-ul">
-        <button class="slider-dots-button slider-button-active" type="button">
-          <span class="visually-hidden">1 слайдер</span>
-        </button>
-        <button class="slider-dots-button" type="button">
-          <span class="visually-hidden">2 слайдер</span>
-        </button>
-        <button class="slider-dots-button" type="button">
-          <span class="visually-hidden">3 слайдер</span>
-        </button>
+        <li class="slider-dots-item">
+          <button class="slider-dots-button slider-button-active" type="button">
+            <span class="visually-hidden">1 слайдер</span>
+          </button>
+        </li>
+        <li class="slider-dots-item">
+          <button class="slider-dots-button" type="button">
+            <span class="visually-hidden">2 слайдер</span>
+          </button>
+        </li>
+        <li class="slider-dots-item">
+          <button class="slider-dots-button" type="button">
+            <span class="visually-hidden">3 слайдер</span>
+          </button>
+        </li>
       </ol>
     </section>
     <!-- Категория товара -->
@@ -372,16 +379,16 @@
           <img class="delivery-iamge" src="images/svg/delivery-fast.svg" alt="Доставка" width="47" height="31">
         </div>
         <h3 class="delivery-text title-3">Доставим редкий товар под заказ</h3>
-        <button class="delivery-info" type="button">
+        <div class="delivery-info">
           <span class="visually-hidden">Посмотреть дополнительную информацию</span>
           <img class="delivery-iamge" src="images/svg/info.svg" alt="Доставка" width="2" height="12">
-        </button>
+        </div>
       </a>
     </section>
     <!-- О компании -->
     <div class="company container">
       <section class="company-block about">
-        <h2 class="company-title title-1">О нас</h2>
+        <h2 class="company-title reset-indent title-1">О нас</h2>
         <p class="company-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p class="about-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
         </p>
@@ -393,7 +400,7 @@
         <a class="button company-button" href="#">Подробнее о нас</a>
       </section>
       <section class="company-block contacts">
-        <h2 class="company-title title-1">Контакты</h2>
+        <h2 class="company-title reset-indent title-1">Контакты</h2>
         <p class="company-text">Вы можете забрать товар сами, заехав в наш офис.
           Заодно сможете проверить работоспособность покупки. </p>
         <h3 class="contacts-subtitle reset-indent">Интернет-магазин «Девайс»</h3>
@@ -421,11 +428,10 @@
 
           <form class="newsletters-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="newsletters-label">
-              <span class="visually-hidden" for="mailing-email">Ваш Email</span>
-              <input class="newsletters-form-field" placeholder="Ваш e-mail" type="email" name="mailing-email"
-                id="mailing-email" required>
-              <button class="button newsletters-form-buttom" type="submit">Подписаться</button>
+              <span class="visually-hidden">Ваш Email</span>
+              <input class="newsletters-form-field" placeholder="Ваш e-mail" type="email" name="mailing-email" required>
             </label>
+            <button class="button newsletters-form-buttom" type="submit">Подписаться</button>
           </form>
 
           <div class="newsletters-info">
@@ -433,6 +439,7 @@
             <p class="newsletters-info-text">Это бесплатно</p>
           </div>
         </div>
+      </div>
     </section>
   </main>
   <!-- MAIN END -->
@@ -440,7 +447,7 @@
   <footer class="page-footer">
     <div class="page-footer-wrapper container">
       <div class="footer-item footer-address">
-        <a class="footer-logo">
+        <a class="footer-logo" href="index.html">
           <img class="footer-logo-image" src="images/svg/logo-yellow.svg" width="145" height="36"
             alt="Логотип интернет магазина Девайс">
         </a>
@@ -499,59 +506,70 @@
       <div class="footer-item footer-authors">
         <a class="footer-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         <a class="footer-authors-link" href="https://htmlacademy.ru/">
-          <svg class="footer-link-htmlacademy" width="115" height="34" viewBox="0 0 115 34" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 12.9V15.5H2.5V12.9H0Z" fill="#FFC700" />
-            <path
-              d="M11.5999 4.5C9.9999 4.5 8.7999 5.2 7.9999 6.2H7.8999V0H5.8999V15.5H7.8999V10.2C7.8999 8.1 9.1999 6.6 11.1999 6.6C12.9999 6.6 14.0999 8 14.0999 9.8V15.5H16.0999V9.4C16.1999 6.4 14.2999 4.5 11.5999 4.5Z"
-              fill="#FFC700" />
-            <path
-              d="M26.5999 4.79998H21.7999V1.09998H19.7999V4.89998H17.8999V6.89998H19.7999V12.9C19.7999 14.6 20.7999 15.6 22.4999 15.6H26.5999V13.6H22.8999C22.1999 13.6 21.7999 13.2 21.7999 12.5V6.79998H26.5999V4.79998Z"
-              fill="#FFC700" />
-            <path
-              d="M41.1 4.59998C39.5 4.59998 38.2 5.39998 37.6 6.69998H37.5C36.9 5.49998 35.7 4.59998 34.1 4.59998C32.7 4.59998 31.6 5.39998 31 6.39998H30.9V4.79998H29V15.4H31V9.99998C31 7.99998 32 6.49998 33.6 6.49998C35.1 6.49998 36 7.49998 36 9.09998V15.4H38V9.79998C38 7.39998 39.4 6.49998 40.6 6.49998C42.1 6.49998 43 7.49998 43 9.09998V15.4H45V8.89998C45.1 6.39998 43.6 4.59998 41.1 4.59998Z"
-              fill="#FFC700" />
-            <path
-              d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9001C50.2001 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z"
-              fill="#FFC700" />
-            <path
-              d="M28.9001 19.7C28.0001 18.6 26.7001 17.9 25.0001 17.9C21.9001 17.9 19.6001 20.2 19.6001 23.5C19.6001 26.8 21.9001 29.1 25.0001 29.1C26.8001 29.1 28.0001 28.3 28.8001 27.2H28.9001V28.8H30.9001V18.2H28.9001V19.7ZM25.3001 27.1C23.1001 27.1 21.7001 25.5 21.7001 23.5C21.7001 21.5 23.1001 19.9 25.3001 19.9C27.5001 19.9 28.9001 21.5 28.9001 23.5C28.9001 25.4 27.5001 27.1 25.3001 27.1Z"
-              fill="#FFC700" />
-            <path
-              d="M44.2 22C43.7 19.6 41.5999 17.9 38.7999 17.9C35.3999 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.3999 29.1 38.7999 29.1C41.5999 29.1 43.7 27.3 44.2 24.9H42.0999C41.6999 26.2 40.3999 27.2 38.7999 27.2C36.5999 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.5999 20 38.7999 20C40.3999 20 41.5999 21 42.0999 22.2H44.2V22Z"
-              fill="#FFC700" />
-            <path
-              d="M55.1 19.7C54.2 18.6 52.9001 17.9 51.2001 17.9C48.1001 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1001 29.1 51.2001 29.1C53.0001 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9001 25.5 47.9001 23.5C47.9001 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z"
-              fill="#FFC700" />
-            <path
-              d="M68.6999 19.8C67.7999 18.7 66.4999 17.9 64.7999 17.9C61.6999 17.9 59.3999 20.2 59.3999 23.5C59.3999 26.8 61.5999 29.1 64.7999 29.1C66.4999 29.1 67.7999 28.3 68.5999 27.3H68.6999V28.8H70.6999V13.4H68.6999V19.8ZM65.0999 27.1C62.8999 27.1 61.4999 25.5 61.4999 23.5C61.4999 21.5 62.8999 19.9 65.0999 19.9C67.2999 19.9 68.6999 21.5 68.6999 23.5C68.5999 25.5 67.1999 27.1 65.0999 27.1Z"
-              fill="#FFC700" />
-            <path
-              d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z"
-              fill="#FFC700" />
-            <path
-              d="M98.2001 17.9C96.6001 17.9 95.3001 18.7 94.6001 19.9H94.5001C93.9001 18.7 92.7001 17.9 91.1001 17.9C89.7001 17.9 88.6001 18.6 88.0001 19.7V18.2H86.1001V28.8H88.1001V23.4C88.1001 21.4 89.1001 20 90.7001 19.9C92.2001 19.9 93.1001 20.9 93.1001 22.5V28.8H95.1001V23.2C95.1001 20.8 96.5001 19.9 97.7001 19.9C99.2001 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2001 17.9Z"
-              fill="#FFC700" />
-            <path
-              d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z"
-              fill="#FFC700" />
-          </svg>
-
+          <img class="footer-link-htmlacademy" src="images/svg/htmlacademy.svg" width="115" height="34"
+            alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
   <!-- FOOTER END -->
 
-  <div class="modal-container">
-    <div class="modal modal-order">
-      <section class="modal-content">
-        <h2 class="modal-title reset-indent title-1">Доставка под заказ</h2>
-        <button class="modal-close-button">
-          <img class="modal-close-icon" src="images/svg/delete.svg" width="26" height="26" alt="Закрыть">
+  <div class="overlay">
+    <section class="modal">
+      <div class="modal-header">
+        <h2 class="modal-title title-1">Доставка под заказ</h2>
+        <button class="modal-close">
           <span class="visually-hidden">Закрыть</span>
+          <img class="modal-close-icon" src="images/svg/delete.svg" width="26" height="26" alt="Закрыть">
         </button>
-      </section>
+      </div>
+
+      <form action="#" class="modal-form">
+        <div class="modal-form-group">
+          <label for="username" class="modal-form-label"></label>
+          <input type="text" name="username" id="username" class="modal-form-field">
+          <p class="modal-message"></p>
+        </div>
+        <div class="modal-form-group">
+          <label for="email" class="modal-form-label"></label>
+          <input type="email" name="email" id="email" class="modal-form-field">
+          <p class="modal-message"></p>
+        </div>
+        <div class="modal-form-group">
+          <label for="email" class="modal-form-label"></label>
+          <input type="email" name="email" id="email" class="modal-form-field">
+          <p class="modal-message"></p>
+        </div>
+        <div class="modal-form-group">
+          <div class="modal-form-hint">
+            <label for="count" class="modal-form-label"></label>
+            <button class="hint" type="button">
+              <img src="" alt="">
+            </button>
+            <p class="hint-text"></p>
+          </div>
+          <div class="modal-form-counter">
+            <button class="modal-form-up" type="button">+</button>
+            <input type="number" name="count" id="count" class="modal-form-field">
+            <button class="modal-form-down" type="button">-</button>
+          </div>
+          <p class="modal-message"></p>
+        </div>
+        <div class="modal-form-group">
+          <button type="submit"></button>
+        </div>
+      </form>
+    </section>
+  </div>
+
+  <div class="modal-container">
+    <div class="modal">
+      <h2 class="modal-title reset-indent title-1">Доставка под заказ</h2>
+
+      <button class="modal-close-button">
+        <img class="modal-close-icon" src="images/svg/delete.svg" width="26" height="26" alt="Закрыть">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
 
       <form class="order-form" action="https://echo.htmlacademy.ru/" method="POST">
         <div class="field-group order-form-name">
